--- a/Uonic.Ionic/src/app/app.html
+++ b/Uonic.Ionic/src/app/app.html
@@ -1,1 +1,12 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+    <ion-content>
+        <ion-list>
+            <ion-item (click)="logOut()" menuClose>
+                <ion-icon name="log-out" item-left></ion-icon>
+                Log Out
+            </ion-item>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+<ion-nav #content [root]="rootPage"></ion-nav>
