Show available external logins on the login page

--- a/Uonic.Ionic/src/pages/login/login.scss
+++ b/Uonic.Ionic/src/pages/login/login.scss
@@ -1,11 +1,11 @@
 page-login {
-    .facebook {
+    .facebook>button {
         color: #3b5998;
     }
-    .google {
+    .google>button {
         color: #db3236;
     }
-    .twitter {
+    .twitter>button {
         color: #55acee;
     }
     .hr {
